# gcn-kafka-python

./: .gitignore  .pre-commit-config.yaml  README.md  gcn_kafka.py  pyproject.toml  setup.cfg  tox.ini
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml  publish.yml  test.yml  tox.yml
gcn_kafka/: __init__.py  core.py  env.py  oidc.py
gcn_kafka/test/: test_core.py  test_env.py  test_oidc.py
src/gcn_kafka/: __init__.py  core.py  oidc.py
test/: test_core.py  test_env.py  test_oidc.py
