[metadata]
name = gcn-kafka
description = Kafka client for NASA's General Coordinates Network (GCN)
long_description = file:README.md
classifiers =
    Intended Audience :: Education
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Physics
    Topic :: System :: Networking

[options]
install_requires =
    authlib
    certifi
    confluent-kafka >= 1.8.2
    requests
packages = find:
python_version = >=3.7
