[metadata]
name = gcn-kafka
description = Kafka client for NASA's General Coordinates Network (GCN)
license = CC0-1.0
long_description = file:README.md
long_description_content_type = text/markdown
author = Leo Singer, Tom Barclay, Eric Burns
author_email = leo.p.singer@nasa.gov, tb@umbc.edu, ericburns@lsu.edu
classifiers =
    Intended Audience :: Education
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Physics
    Topic :: System :: Networking

[options]
install_requires =
    authlib
    certifi
    confluent-kafka >= 1.8.2
    requests
    typing-extensions; python_version<='3.7'
packages = find:
python_version = >=3.7
